# FastApi_sms_user

./: celery_config.py  celery_utils.py  database.py  forms.py  hashing.py  main.py  models.py  pyproject.toml  routers.py  settings.py
celery_tasks/: send_email.py
