[tool.poetry]
name = "exam"
version = "0.1.0"
description = ""
authors = ["nusratullo2004 <122892486+nusratullo2004@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.9"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.6"
fastapi = "^0.95.0"
redis = "^4.5.4"
uvicorn = "^0.21.1"
faker = "^18.3.4"
passlib = "^1.7.4"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
